--- a/pages/users/layout.module.css
+++ b/pages/users/layout.module.css
@@ -13,14 +13,16 @@
     width: 90%;
     max-width: 920px;
     min-height: 500px;
-    position: absolute;
+    position: relative;
     top: 4rem;
     left: 50%;
     transform: translateX(-50%);
     border-radius:20px;
     box-shadow: 0px 3px 10px 3px rgb(70 65 65 / 25%);
     padding: 1.25rem 0;
+    margin-bottom: 10rem;
 }
+
 
 @media(max-width: 600px) {
     .container{
@@ -34,10 +36,5 @@
     .wrapper{
         top: 2.5rem;
     }
-    .marginBot{
-        width: 100%;
-        position: absolute;
-        height: 2rem;
-        bottom: -1rem;
-    }
+
 }
