--- a/components/user/components/listDiaTreino.module.css
+++ b/components/user/components/listDiaTreino.module.css
@@ -3,30 +3,31 @@
   gap: 10px;
   font-family: sans-serif;
   justify-content: space-evenly;
-  background-color: #FFF6F6;
+  background-color: #fff6f6;
   border-radius: 15px;
   box-shadow: 0px 3px 10px 3px rgb(70 65 65 / 25%);
   padding: 15px 0;
   width: 95%;
   margin: 0 auto;
 }
-.wrapperDia{
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
+.wrapperDia {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  gap: 08px;
 }
 
-.dianumber{
-    font-family: 'Montserrat',sans-serif;
-    font-weight: 800;
-    color: #00000040;
+.dianumber {
+  font-family: "Montserrat", sans-serif;
+  font-weight: 800;
+  color: #000000cc;
 }
 
 .dia {
-  font-family: 'Montserrat',sans-serif;
+  font-family: "Montserrat", sans-serif;
   text-align: center;
-  background-color: #bde7f8;
+  background-color: #0b0b0b5e;
   border-radius: 50%;
   width: 50px;
   height: 50px;
@@ -35,7 +36,7 @@
   align-items: center;
   justify-content: center;
   font-weight: bold;
-  font-size: 10px;  
+  font-size: 10px;
 }
 
 .inativo {
@@ -45,33 +46,36 @@
 .sigla {
   font-size: 12px;
   font-weight: 800;
-  color: #777;
-  font-family: 'Montserrat',sans-serif;
+  color: #000000cc;
+  font-family: "Montserrat", sans-serif;
 }
-.iconLinks{
+.iconLinks {
   width: 25px;
   height: 25px;
-  display:flex;
+  display: flex;
   align-items: center;
   justify-content: center;
-  border-radius:50%
+  border-radius: 50%;
 }
-@media(max-width: 600px) {
-    .dia {
-        width: 30px;
-        height: 30px;
-        font-size: 7px;
-    }
+@media (max-width: 600px) {
+  .dia {
+    width: 30px;
+    height: 30px;
+    font-size: 7px;
+  }
 
-    .sigla {
+  .sigla {
     font-size: 10px;
-    }
+  }
+  .dianumber {
+    font-size: 12px;
+  }
 }
 
-@media(max-width: 360px) {
-    .dia {
-        width: 20px;
-        height: 20px;
-        font-size: 6px;
-    }
+@media (max-width: 360px) {
+  .dia {
+    width: 20px;
+    height: 20px;
+    font-size: 6px;
+  }
 }
