--- a/components/user/components/treinoPage.module.css
+++ b/components/user/components/treinoPage.module.css
@@ -51,7 +51,7 @@
   background-color: #f8eded;
 }
 
-.tabelaTreino {
+.linha {
   margin: 0 auto;
   margin-top: 20px;
   font-family: "Montserrat", sans-serif;
@@ -59,58 +59,84 @@
   border-radius: 12px;
   padding: 16px;
   width: 90%;
-  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.05);
+  box-shadow: 0px 3px 10px 3px rgb(70 65 65 / 25%);
 }
 
-.cabecalho {
+.titleCards {
   display: grid;
-  text-align: center;
-  grid-template-columns: 2fr 1fr 1fr 0.5fr;
-  font-weight: bold;
-  color: #555;
-  padding-bottom: 8px;
-  border-bottom: 1px solid #ddd;
+  grid-template-columns: 4fr 1fr 1fr;
+  align-items: center;
+  font-size: 24px;
+  font-weight: 800;
+  color: #194d8a;
+}
+
+.subTitleCards {
+  margin-top: 4px;
+  display: grid;
+  grid-template-columns: 4fr 1fr 1fr;
+  align-items: center;
+  font-size: 16px;
+  font-weight: 600;
+  color: #4b86bb;
+}
+
+.wrapperButtons {
+  margin-top: 10px;
   margin-bottom: 10px;
-}
-
-.linha {
   display: grid;
-  grid-template-columns: 2fr 1fr 1fr 0.5fr;
+  grid-template-columns: 4fr 1fr 1fr;
   align-items: center;
-  padding: 10px 0;
-  border-bottom: 1px solid #eee;
 }
 
-.iconeNome {
-  display: flex;
-  align-items: center;
-  gap: 10px;
-}
-
-.icone {
-  width: 40px;
-  height: 40px;
-  background-color: #d2f0fd;
-  border-radius: 50%;
-}
-
-.musculo {
-  font-size: 12px;
-  color: #888;
+.textBottom {
+  font-size: 16px;
+  font-weight: 500;
+  color: #335a91;
 }
 
 .status {
-  width: 16px;
-  height: 16px;
+  width: 20px;
+  height: 20px;
   border-radius: 50%;
-  border: 2px solid #00b3ff;
+  border: 2px solid #4aa7b0;
   cursor: pointer;
-  display: inline-block;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.naofeito {
+  display: none;
+}
+.feito {
+  display: flex;
 }
 
-.feito {
-  background-color: #c5f900;
-  border-color: #c5f900;
+.image {
+  width: 30px;
+  height: 30px;
+}
+.btnPlay {
+  font-size: 16px;
+  font-weight: 600;
+  color: #194d8a;
+  width: 140px;
+  padding: 10px 15px;
+  border: none;
+  border-radius: 8px;
+  background-color: #daf3ff;
+  display: flex;
+  align-items: center;
+  gap: 6px;
+}
+
+.alingItems {
+  display: flex;
+  justify-content: center;
+}
+
+.leftItems {
+  justify-content: start;
 }
 
 .btnFinalizar {
@@ -125,18 +151,24 @@
   width: 100%;
 }
 
-.alingItems {
-  text-align: center;
-  display: flex;
-  justify-content: center;
-}
-
 @media (max-width: 650px) {
-  .cabecalho {
+  .textBottom {
     font-size: 10px;
   }
-  .linha {
+  .subTitleCards {
+    font-size: 12px;
+  }
+  .titleCards {
+    font-size: 16px;
+  }
+  .btnPlay {
     font-size: 10px;
+    width: 90px;
+    padding: 5px 10px;
+  }
+  .image {
+    width: 20px;
+    height: 20px;
   }
 }
 
