--- a/pages/admin/alunos/layout.module.css
+++ b/pages/admin/alunos/layout.module.css
@@ -1,8 +1,13 @@
 .container {
-  font-family: 'Montserrat',sans-serif;
+  font-family: "Montserrat", sans-serif;
+  width: 90%;
   max-width: 700px;
   margin: 0 auto;
+  margin-top: 1rem;
+  border-radius: 10px;
+  box-shadow: 1px 4px 8px 2px #00000040;
   padding: 20px;
+  background-color: #fff6f6;
 }
 
 .titulo {
@@ -18,7 +23,7 @@
 }
 
 .campo label {
-  font-weight: 500;
+  font-weight: 600;
   display: block;
   margin-bottom: 6px;
 }
@@ -43,4 +48,48 @@
 
 .botao:hover {
   background-color: #4095f6;
+}
+
+.wrapersLinksEdits {
+  display: flex;
+  width: 60%;
+  margin: 0 auto;
+  justify-content: space-around;
+}
+
+.label {
+  font-weight: 800;
+  color: #262626;
+}
+.conteinerButtons {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+
+.btnLinks {
+  background-color: #0070f3;
+  border: none;
+  border-radius: 50%;
+  width: 35px;
+  height: 35px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  transition: transform 0.2s ease;
+}
+
+.btnLinks:hover {
+  cursor: pointer;
+  transform: scale(1.1);
+}
+
+.btnLinks svg {
+  transition: transform 0.2s ease;
+}
+
+.btnLinks:hover svg {
+  transform: scale(1.1);
 }
