--- a/styles/global.css
+++ b/styles/global.css
@@ -14,3 +14,13 @@ svg:focus {
 .ytp-shorts-mode {
   height: 40px;
 }
+
+input[type="number"]::-webkit-inner-spin-button,
+input[type="number"]::-webkit-outer-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+
+input[type="number"] {
+  -moz-appearance: textfield;
+}
