--- a/components/user/components/tutorialVideo.module.css
+++ b/components/user/components/tutorialVideo.module.css
@@ -2,7 +2,8 @@
   position: fixed;
   width: 100%;
   height: 100%;
-  background-color: #00000085;
+  background-color: #000000de;
+  z-index: 999;
 }
 
 .container {
