--- a/components/admin/listaalunos.module.css
+++ b/components/admin/listaalunos.module.css
@@ -1,8 +1,17 @@
 .container {
-  font-family: 'Montserrat',sans-serif;
+  font-family: "Montserrat", sans-serif;
   max-width: 600px;
   margin: 0 auto;
   padding: 16px;
+  background-color: #f4f7fa;
+  border-radius: 15px;
+  padding: 30px 20px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 50%;
+  max-width: 800px;
+  box-shadow: 0 4px 10px 1px rgb(0 0 0 / 25%);
 }
 
 .titulo {
@@ -12,25 +21,27 @@
 }
 
 .input {
-  width: 100%;
+  width: 92%;
   padding: 10px;
   margin-bottom: 16px;
   border: 1px solid #ccc;
-  border-radius: 4px;
+  border-radius: 10px;
 }
 
 .lista {
   list-style: none;
   padding: 0;
+  width: 95%;
 }
 
 .item {
   display: flex;
   justify-content: space-between;
-  background-color: #f3f3f3;
-  padding: 12px;
-  margin-bottom: 10px;
-  border-radius: 4px;
+  background-color: #f1f9ff;
+  padding: 8px 12px;
+  margin-bottom: 16px;
+  border-radius: 10px;
+  box-shadow: 0 1px 10px 1px rgb(0 0 0 / 25%);
 }
 
 .botao {
@@ -40,6 +51,8 @@
   padding: 6px 12px;
   border-radius: 4px;
   cursor: pointer;
+  font-weight: 700;
+  font-size: 14px;
 }
 
 .botao:hover {
