--- a/components/admin/editMetas.module.css
+++ b/components/admin/editMetas.module.css
@@ -3,14 +3,13 @@
     width: 90%;
     max-width: 1200px;
     padding: 16px;
-    background: #FFF6F6;
+    background: #F8FBFF;
     border-radius: 12px;
-    box-shadow: 0px 4px 8px 2px rgba(0, 0, 0, 0.05);
+    box-shadow: 0 4px 10px 1px rgb(0 0 0 / 25%);
     font-family: 'Montserrat', sans-serif;
 }
 
 .refeicao {
-  background: #f9f9f9;
   padding: 16px;
   border-radius: 8px;
   margin-bottom: 16px;
@@ -21,10 +20,10 @@
   padding: 8px;
   font-weight: bold;
   font-size: 16px;
-  border: none;
+  border: 1px #CBC6C6 solid;
   border-radius: 6px;
   margin-bottom: 12px;
-  background: #e6e6e6;
+  background: #F8FBFF;
   text-align: center;
 }
 
@@ -39,9 +38,9 @@
   flex: 1;
   min-width: 100px;
   padding: 8px;
-  border: none;
+  border: 1px #CBC6C6 solid;
   border-radius: 6px;
-  background: #e6e6e6;
+  background: #F8FBFF;
 }
 
 .total {
@@ -51,7 +50,7 @@
 }
 
 .remover {
-  background: #888;
+  background: #ff0054;
   color: white;
   border: none;
   padding: 8px 12px;
@@ -69,7 +68,7 @@
 }
 
 .acoes button {
-  background: #aaa;
+  background: #0083FF;
   color: white;
   border: none;
   padding: 10px 20px;
@@ -84,13 +83,14 @@
   font-weight: bold;
   margin: 16px 0;
   padding: 12px;
-  background: #dcdcdc;
+  border: 1px #CBC6C6 solid;
+  background: #F8FBFF;
   border-radius: 8px;
 }
 
 .salvar {
   width: 100%;
-  background: #666;
+  background: #0083FF;
   color: white;
   border: none;
   padding: 14px;
