--- a/components/admin/header.module.css
+++ b/components/admin/header.module.css
@@ -2,10 +2,8 @@
     width: 100%;
     height: 60px;
     display: flex;
-    justify-content: space-evenly;
+    justify-content: space-between;
     align-items: center;
-    background-color: #d7e9ff;
-    border-bottom: 1px #0070f3 solid;
 }
 
 .btnVoltar{
