--- a/components/admin/listaalunos.module.css
+++ b/components/admin/listaalunos.module.css
@@ -58,3 +58,23 @@
 .botao:hover {
   background-color: #0059c1;
 }
+ 
+@media(max-width: 650px) {
+  .container{
+    width: 95%;
+  }
+  .item{
+    font-size: 14px;
+  }
+  .botao{
+    font-size: 14px;
+  }
+}
+
+ 
+@media(max-width: 390px) {
+  .item{
+    flex-direction: column;
+    gap: 15px;
+  }
+}
