--- a/pages/admin/alunos/layout.module.css
+++ b/pages/admin/alunos/layout.module.css
@@ -1,13 +1,33 @@
-.container {
+.layoutContainer{
+    display: flex;
+    background-color: #edf3fc;
+    height: 100vh;
+    padding: 0 20px;
+    font-family: "Montserrat", sans-serif;
+    flex-direction: column;
+}
+.containerSection{
   font-family: "Montserrat", sans-serif;
-  width: 90%;
-  max-width: 700px;
+      display: flex;
+    /* height: 80%; */
+}
+.container {
+  
   margin: 0 auto;
   margin-top: 1rem;
   border-radius: 10px;
-  box-shadow: 1px 4px 8px 2px #00000040;
   padding: 20px;
   background-color: #fff6f6;
+  max-width: 600px;
+  margin: 0 auto;
+  padding: 16px;
+  background-color: #f4f7fa;
+  border-radius: 15px;
+  padding: 30px 20px;
+  align-items: center;
+  width: 50%;
+  max-width: 800px;
+  box-shadow: 0 4px 10px 1px rgb(0 0 0 / 25%);
 }
 
 .titulo {
@@ -93,3 +113,23 @@
 .btnLinks:hover svg {
   transform: scale(1.1);
 }
+
+@media(max-width: 800px) {
+  .container{
+    width: 95%;
+  }
+}
+
+@media(max-width: 500px) {
+  .titulo{
+    font-size: 1rem;
+  }
+  .campo{
+    font-size: 0.95rem;
+  }
+  .label{
+    font-size: 0.85rem;
+  }
+}
+
+
