--- a/components/admin/financa/home.module.css
+++ b/components/admin/financa/home.module.css
@@ -16,7 +16,7 @@
     gap: 1.75rem;
     width: fit-content;
     margin: 0 auto;
-    justify-content: flex-start;
+    justify-content: space-around;
 }
 
 .CardsInformation{
