--- a/components/admin/sidebar.module.css
+++ b/components/admin/sidebar.module.css
@@ -1,5 +1,5 @@
 .sidebar {
-  background-color: #f4f7fa;
+  background-color: #f8fbff;
   border-radius: 15px;
   padding: 30px 20px;
   display: flex;
