--- a/components/admin/financa/home.module.css
+++ b/components/admin/financa/home.module.css
@@ -40,7 +40,7 @@
 
 .CardsWapperNumber{
     display: flex;
-    align-items: end;
+    align-items: flex-end;
     gap: 5px;
     margin-left: 15px;
 }
