--- a/components/admin/financa/home.module.css
+++ b/components/admin/financa/home.module.css
@@ -1,7 +1,7 @@
 .Container{
     background-color: #F8FBFF;
     font-family: 'Montserrat',sans-serif;
-    height: 100vh;
+    
 }
 
 .Title{
@@ -25,7 +25,7 @@
     box-shadow: 0px 4px 10px 1px #00000040;
     border-radius: 8px;
     
-    width: 220px;
+    width: 190px;
     height: 94px;
     display: flex;
     flex-direction: column;
@@ -60,4 +60,28 @@
     font-size: 10px;
     font-weight: 500;
     margin-left: 15px;
+}
+
+
+
+
+@media(max-width: 900px) {
+    .CardsInformation{
+        width: 130px;
+        height: 84px;
+    }
+}
+
+@media(max-width: 550px) {
+    .CardsInformation{
+        width: 170px;
+    }
+    
+}
+
+@media(max-width: 420px) {
+    .CardsInformation{
+        width: 160px;
+    }
+    
 }
